--- a/output.css
+++ b/output.css
@@ -349,6 +349,9 @@
   .w-\[50\%\] {
     width: 50%;
   }
+  .w-\[50vw\] {
+    width: 50vw;
+  }
   .w-\[60\%\] {
     width: 60%;
   }
@@ -357,6 +360,9 @@
   }
   .w-\[70\%\] {
     width: 70%;
+  }
+  .w-\[70vw\] {
+    width: 70vw;
   }
   .w-\[90\%\] {
     width: 90%;
