--- a/output.css
+++ b/output.css
@@ -346,6 +346,15 @@
   .h-\[38px\] {
     height: 38px;
   }
+  .h-\[75px\] {
+    height: 75px;
+  }
+  .h-\[340px\] {
+    height: 340px;
+  }
+  .h-\[540px\] {
+    height: 540px;
+  }
   .w-\[33\.33\%\] {
     width: 33.33%;
   }
@@ -577,6 +586,16 @@
       height: calc(var(--spacing) * 50);
     }
   }
+  .max-sm\:h-\[75px\] {
+    @media (width < 40rem) {
+      height: 75px;
+    }
+  }
+  .max-sm\:h-\[375px\] {
+    @media (width < 40rem) {
+      height: 375px;
+    }
+  }
   .max-sm\:h-\[540px\] {
     @media (width < 40rem) {
       height: 540px;
@@ -585,6 +604,21 @@
   .max-sm\:h-\[640px\] {
     @media (width < 40rem) {
       height: 640px;
+    }
+  }
+  .max-sm\:h-dvw {
+    @media (width < 40rem) {
+      height: 100dvw;
+    }
+  }
+  .max-sm\:h-lvw {
+    @media (width < 40rem) {
+      height: 100lvw;
+    }
+  }
+  .max-sm\:h-svw {
+    @media (width < 40rem) {
+      height: 100svw;
     }
   }
   .sm\:col-span-4 {
