--- a/output.css
+++ b/output.css
@@ -926,6 +926,11 @@
       font-size: 3.25rem;
     }
   }
+  .xl\:w-\[100\%\] {
+    @media (width >= 80rem) {
+      width: 100%;
+    }
+  }
   .xl\:w-\[100vw\] {
     @media (width >= 80rem) {
       width: 100vw;
